# wfp-poc

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_TASKS_CORRECTIONS.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.txt  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_ISSUE_5.md  LICENSE.md  Makefile  README.md  docker-compose.ci.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run.py  wsgi.py
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: api-architect.agent.md  flask-api-expert.agent.md  gilfoyle.agent.md  git-github-expert.agent.md  specification.agent.md
.github/instructions/: models.instructions.md  resources.instructions.md  schemas.instructions.md  services.instructions.md  tests.instructions.md
.github/prompts/: create-github-issues.prompt.md  debug-api-error.prompt.md  design-database-schema.prompt.md  estimate-implementation.prompt.md  generate-api-changelog.prompt.md  generate-api-endpoint-spec.prompt.md  generate-conventional-commits.prompt.md  generate-curl-examples.prompt.md  generate-data-migration.prompt.md  generate-e2e-test-scenarios.prompt.md  generate-flask-model.prompt.md  generate-flask-resource-class.prompt.md  generate-flask-resource.prompt.md  generate-flask-schemas.prompt.md  generate-flask-service.prompt.md  generate-flask-tests.prompt.md  generate-guardian-config.prompt.md  generate-openapi-from-spec.prompt.md  generate-postman-collection.prompt.md  generate-test-fixtures.prompt.md  plan-api-architecture.prompt.md  plan-api-versioning.prompt.md  prompt-builder.prompt.md  review-against-spec.prompt.md  update-openapi-spec.prompt.md  validate-api-spec-completeness.prompt.md
.github/workflows/: ci.yml  codeql.yml  dependencies.yml  docker.yml  openapi-lint.yml  release.yml  security.yml
app/: __init__.py  cli.py  config.py  routes.py
app/constants/: __init__.py  http.py
app/models/: __init__.py  assignment.py  db.py  dummy.py  evm_snapshot.py  expense.py  milestone.py  milestone_rae.py  milestone_task.py  progress_update.py  project.py  rae_entry.py  resource.py  task.py  task_predecessor.py  types.py
app/resources/: __init__.py  assignment_res.py  evm_res.py  expense_res.py  health.py  milestone_res.py  milestone_task_res.py  progress_res.py  project_res.py  rae_res.py  resource_res.py  statistics_res.py  task_res.py
app/schemas/: __init__.py  assignment_schema.py  evm_schema.py  expense_schema.py  milestone_schema.py  progress_schema.py  project_schema.py  rae_schema.py  resource_schema.py  statistics_schema.py  task_schema.py
app/services/: __init__.py  evm_service.py  guardian_service.py
app/utils/: __init__.py  api_version.py  correlation.py  jwt_decorators.py  logger.py  metrics_auth.py  rate_limit.py
docs/: README.md  wfp-poc-api.html
migrations/: env.py
migrations/versions/: 62af69c6fc72_add_progress_update_tracking_fields.py  6a6a7592913f_create_project_management_evm_schema_.py  7754e8504794_update_milestones_table_for_openapi_.py  9d1ae3c65d7a_align_project_with_openapi.py  aca11ddc49be_add_milestone_id_to_expenses_for_.py  daae3789a8f5_initial_schema.py  f4380a6f5ffa_replace_raeentry_with_milestonerae_and_.py  fc4baed52c98_create_dummies_table_with_indexes_and_.py
openapi/: dummies-api.yaml  health-endpoints.yaml  metrics-endpoint.yaml  wfp-poc-api-bundle.yaml  wfp-poc-api-modular.yaml
openapi/components/: parameters.yaml  responses.yaml  security.yaml
openapi/paths/: assignments.yaml  evm.yaml  expenses.yaml  health.yaml  metrics.yaml  milestones.yaml  progress.yaml  projects.yaml  rae.yaml  resources.yaml  statistics.yaml  tasks.yaml
spec/: architecture-project-management-evm.md  integration-wfp-services.md  schema-api-dummies-crud.md  schema-api-health-endpoints.md  spec-process-api-spec-validation-report.md  spec-process-openapi-completeness-audit.md  spec-tool-poc-import.md
spec/poc-export/: schema-api-metrics-endpoint.md  schema-tool-poc-export-service.md
spec/poc-import/: README.md  schema-tool-poc-import-service.md  spec-tool-poc-import-cli.md
spec/wfp-poc/: schema-api-health-endpoints.md  schema-api-project-management-evm.md
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_assignments_api.py  test_evm_api.py  test_expenses_api.py  test_health_api.py  test_metrics_api.py  test_milestones_api.py  test_progress_api_history.py  test_progress_api_update.py  test_projects_api_crud.py  test_projects_api_list.py  test_rae_api.py  test_resources_api_crud.py  test_resources_api_list.py  test_statistics_api.py  test_tasks_api_crud.py
tests/unit/: __init__.py  conftest.py  test_app_factory.py  test_cli.py  test_config.py  test_correlation.py  test_guardian_service.py  test_health.py  test_jwt_decorators.py  test_logger.py  test_metrics_auth.py  test_metrics_rate_limiting.py  test_run.py  (+5 more)
tools/: generate_jwt.py
tools/poc-import/: .env.example  .gitignore  Makefile  README.md  poc-import.py  pyproject.toml
tools/poc-import/poc_import/: __init__.py  cli.py  config.py  models.py  validators.py
tools/poc-import/poc_import/api/: __init__.py  client.py
tools/poc-import/poc_import/parsers/: __init__.py  msproject.py
tools/poc-import/src/poc_import/: cli.py  cli_support.py  config.py  models.py  shell_state.py  validators.py
tools/poc-import/src/poc_import/api/: client.py
tools/poc-import/src/poc_import/commands/: __init__.py  excel.py  expenses.py  help_cmd.py  msproject.py  rae.py  service.py  shell.py  xml.py
tools/poc-import/src/poc_import/parsers/: excel.py  msproject.py
tools/poc-import/tests/: conftest.py  test_api_client.py  test_cli.py  test_cli_support.py  test_config.py  test_excel_parser.py  test_excel_validators.py  test_msproject_parser.py  test_spec_compliance.py  test_validators.py
tools/poc-import/tests/fixtures/: README.md  circular_dependency.xml  expenses_grouped.xlsx  expenses_valid.xlsx  invalid_dates.xml  large_project.xml  missing_references.xml  rae_invalid_sum.xlsx  rae_valid.xlsx  sample_project.xml  simple_project.xml
tools/poc-import/tests/integration/: test_import_flows.py
(+60 files in other folders)
