# Copyright (c) 2026 Waterfall Project
# SPDX-License-Identifier: Commercial

[project]
name = "poc-import"
version = "1.0.0"
description = "MS Project and Excel import service for wfp-poc API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Commercial"}
authors = [
    {name = "Waterfall Team", email = "team@waterfall-services.io"},
]
keywords = ["ms-project", "excel", "etl", "import", "waterfall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",          # CLI framework
    "lxml>=5.0.0",           # MS Project XML parsing
    "openpyxl>=3.1.0",       # Excel file parsing
    "PyJWT>=2.8.0",           # JWT generation for local imports
    "python-dotenv>=1.0.0",   # Load local .env for poc-import
    "requests>=2.31.0",      # HTTP client for wfp-poc API
    "pydantic>=2.5.0",       # Data validation
    "python-dateutil>=2.8.0", # Date parsing
    "tenacity>=8.2.0",       # Retry logic
    "rich>=13.7.0",          # CLI progress bars and formatting
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
poc-import = "poc_import.cli:main"

[project.urls]
Homepage = "https://github.com/waterfall/wfp-poc"
Documentation = "https://github.com/waterfall/wfp-poc/tree/main/tools/poc-import"
Repository = "https://github.com/waterfall/wfp-poc"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["poc_import*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=poc_import",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["poc_import"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false
strict = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true
